Revamped the home page to make it cleaner

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,27 +1,58 @@
-.text {
-    color: white;
-    font-size: calc(30px + 1vw);
-}
-.specialText {
-    color: #66FCF1;
-}
-.begText {
-    text-align: left;
-    margin-left: 7rem;
-    /* marginTop: 15rem; */
-    height: 92.5vh;
+.wrapper {
+    height: 100vh;
+    position: relative;
+    padding: 0;
+    margin: 0;
     display: flex;
-    flex-wrap: nowrap;
+    flex-direction: column;
     align-items: center;
+    justify-content: center;
+    text-align: center;
 }
-.computer {
-    height: 100%;
+.animation {
+    overflow: hidden;
+    white-space: nowrap;
+    border-right: 4px solid white;
+    color: #66FCF1;
+    font-family: monospace;
+    font-size: calc(30px + 2.75vw);;
+    width: 15ch;
+    animation: type 2s steps(15), blink .5s step-end infinite alternate;
+    margin-top: -10%;
+    margin-bottom: 7%;
+    text-align: center;
+}
+.extra {
+    margin-top: 0%;
+    color: #1f2833;
+    text-align: center;
+    font-size: calc(15px + 1vw);;
+    animation: show 3s;
+    animation-delay: 2.5s;
+    animation-fill-mode: forwards;
+}
+.down {
+    height: 10vh;
+    width: 6vw;
     position: absolute;
-    right: 15%;
-    top: 15rem;
+    margin-top: 40%;
 }
-.lottie {
-    height: max-content;
-    margin-bottom: auto;
-
+@keyframes type {
+    0% {
+        width: 0ch;
+    }
+}
+@keyframes blink {
+    50% {
+        border-color: transparent;
+    }
+}
+@keyframes show {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+        color: white;
+    }
 }
