--- a/src/components/AboutMe.css
+++ b/src/components/AboutMe.css
@@ -38,6 +38,7 @@
     width: auto;
     float: left;
     border-radius: 5px;
+    box-shadow: 2px 2px rgba(0,0,0,0.12);
     /* margin: 0 auto; */
     margin-left: 5vw;
 }
