--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -34,10 +34,15 @@
 .down {
     height: 10vh;
     width: auto;
-    position: absolute;
-    margin-top: 40%;
-    animation: delayed 0s 3s forwards;
-    visibility: hidden;
+    position: relative;
+    top: 200%;
+    margin-left: auto;
+    margin-right: auto;
+    /* margin-top: 40%; */
+    animation: show 2s forwards;
+    animation-delay: 3s;
+    /* visibility: hidden; */
+    opacity: 0;
 }
 @keyframes type {
     0% {
