--- a/src/components/AboutMe.css
+++ b/src/components/AboutMe.css
@@ -13,11 +13,11 @@
 .content {
     flex-direction: row;
     flex: wrap;
-    padding-top: 3vh;
-    padding-bottom: 3vh;
+    /* padding-top: 3vh;
+    padding-bottom: 3vh; */
     /* padding-left: 15rem; */
     justify-content: space-around;
-    background-color: #849baa;
+    background-color: #10151b !important;
     border-radius: 30px;
     box-shadow: 3px 7px 5px -5px rgba(0,0,0,0.2),3px 5px 5px 3px rgba(0,0,0,0.14),3px 5px 9px 3px rgba(0,0,0,0.12);
     margin-left: 2vw;
@@ -41,4 +41,20 @@
     box-shadow: 2px 2px rgba(0,0,0,0.12);
     /* margin: 0 auto; */
     margin-left: 5vw;
+    margin-top: 2vh;
+    margin-bottom: 2vh;
+}
+.down {
+    height: 10vh;
+    width: auto;
+    position: relative;
+    top: 200%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: -5vh;
+    /* margin-top: 40%; */
+    animation: show 2s forwards;
+    animation-delay: 3s;
+    /* visibility: hidden; */
+    opacity: 0;
 }
