--- a/src/components/AboutMe.css
+++ b/src/components/AboutMe.css
@@ -11,12 +11,13 @@
     color: #66FCF1;
 }
 .content {
+    display: flex;
+    justify-content: space-around;
     flex-direction: row;
-    flex: wrap;
+    flex-wrap: wrap;
     /* padding-top: 3vh;
     padding-bottom: 3vh; */
     /* padding-left: 15rem; */
-    justify-content: space-around;
     background-color: #10151b !important;
     border-radius: 30px;
     box-shadow: 3px 7px 5px -5px rgba(0,0,0,0.2),3px 5px 5px 3px rgba(0,0,0,0.14),3px 5px 9px 3px rgba(0,0,0,0.12);
