--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -1,5 +1,5 @@
 .page {
-    height: 100vh;
+    height: max-content;
     text-align: center;
     margin-bottom: 1vh;
 }
@@ -12,9 +12,10 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: center;
 }
 .card {
-    width: 20%;
+    width: 20em;
     height: auto;
     /* background-color: #1f2833; */
     border: 1px solid #10151b;
