Deleted Example Project Card

--- a/src/components/AboutMe.css
+++ b/src/components/AboutMe.css
@@ -1,8 +1,9 @@
 .page {
-    height: 100vh;
+    /* height: 100vh !important; */
     text-align: center;
     display: flex;
     flex-direction: column;
+    margin-bottom: 1vh;
 
 }
 .heading {
@@ -42,6 +43,7 @@
     box-shadow: 2px 2px rgba(0,0,0,0.12);
     /* margin: 0 auto; */
     margin-left: 5vw;
+    margin-right: 1vw;
     margin-top: 2vh;
     margin-bottom: 2vh;
 }
