--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -14,10 +14,10 @@
     white-space: nowrap;
     border-right: 4px solid white;
     color: #66FCF1;
-    font-family: monospace;
-    font-size: calc(30px + 2.75vw);;
-    width: 15ch;
-    animation: type 1.5s steps(15), blink .5s step-end infinite alternate;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: calc(40px + 2.75vw);;
+    width: 13ch;
+    animation: type 1.1s steps(13), blink .5s step-end infinite alternate;
     margin-top: -10%;
     margin-bottom: 7%;
     text-align: center;
@@ -27,7 +27,7 @@
     color: #1f2833;
     text-align: center;
     font-size: calc(15px + 1vw);
-    animation: show 1.5s;
+    animation: show 1s;
     animation-delay: 2s;
     animation-fill-mode: forwards;
 }
@@ -38,12 +38,19 @@
     top: 200%;
     margin-left: auto;
     margin-right: auto;
-    /* margin-top: 40%; */
     animation: show 2s forwards;
-    animation-delay: 3s;
-    /* visibility: hidden; */
+    animation-delay: 2.5s;
+    transition: all .25s ease-in-out; 
     opacity: 0;
 }
+.down:hover {
+    transform: scale(1.2);
+}
+
+.down:active {
+    transform: translate3d(0, 20%, 0);
+}
+
 @keyframes type {
     0% {
         width: 0ch;
