Modified styling for the About page

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -42,6 +42,7 @@
     animation-delay: 2.5s;
     transition: all .25s ease-in-out; 
     opacity: 0;
+    margin-bottom: -100%;
 }
 .down:hover {
     transform: scale(1.2);
