--- a/src/components/AboutMe.css
+++ b/src/components/AboutMe.css
@@ -1,9 +1,10 @@
 .page {
-    /* height: 100vh !important; */
+    min-height: 100vh !important;
     text-align: center;
     display: flex;
     flex-direction: column;
     margin-bottom: 1vh;
+    align-items: center;
 
 }
 .heading {
@@ -13,39 +14,34 @@
 }
 .content {
     display: flex;
-    justify-content: space-around;
     flex-direction: row;
     flex-wrap: wrap;
-    /* padding-top: 3vh;
-    padding-bottom: 3vh; */
-    /* padding-left: 15rem; */
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 5vh;
     background-color: #10151b !important;
     border-radius: 30px;
     box-shadow: 3px 7px 5px -5px rgba(0,0,0,0.2),3px 5px 5px 3px rgba(0,0,0,0.14),3px 5px 9px 3px rgba(0,0,0,0.12);
-    margin-left: 2vw;
-    margin-right: 2vw;
+    width: 70vw;
+}
+.textContainer {
+    height: 100%;
+
 }
 .ptext {
     color: white;
     font-size: calc(15px + 1.1vw);
     text-align: left;
-    float: right;
-    width: 65%;
-    /* margin: 0 auto; */
-    margin-right: 5%;
+    width: 45vw;
+    margin: 1rem;
 
 }
 .me {
-    height: 45vh;
+    height: 40vh;
     width: auto;
-    float: left;
+    margin: 1rem;
     border-radius: 5px;
     box-shadow: 2px 2px rgba(0,0,0,0.12);
-    /* margin: 0 auto; */
-    margin-left: 5vw;
-    margin-right: 1vw;
-    margin-top: 2vh;
-    margin-bottom: 2vh;
 }
 .down {
     height: 10vh;
@@ -55,9 +51,7 @@
     margin-left: auto;
     margin-right: auto;
     margin-bottom: -5vh;
-    /* margin-top: 40%; */
     animation: show 2s forwards;
     animation-delay: 3s;
-    /* visibility: hidden; */
     opacity: 0;
 }
