Changed up the home page

--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -17,6 +17,11 @@
     flex-wrap: wrap;
     justify-content: center;
 }
+
+.img {
+    width: 45vw;
+    height: auto;
+}
 .card {
     width: 20em;
     height: auto;
