--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -13,8 +13,8 @@
     white-space: nowrap;
     border-right: 4px solid white;
     color: white;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: calc(40px + 2.75vw);;
+    /* font-family: BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
+    font-size: calc(40px + 2.75vw);
     width: 13.8ch;
     animation: type 1.1s steps(80), blink .5s step-end infinite alternate;
     margin-top: -10%;
