--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -14,8 +14,9 @@
     border-right: 4px solid white;
     color: white;
     /* font-family: BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
+    font-family: 'Tahoma';
     font-size: calc(40px + 2.75vw);
-    width: 13.8ch;
+    width: 17ch;
     animation: type 1.1s steps(80), blink .5s step-end infinite alternate;
     margin-top: -10%;
     margin-left: 2%;
