--- a/src/components/AboutMe.css
+++ b/src/components/AboutMe.css
@@ -1,5 +1,6 @@
 .page {
     min-height: 100vh !important;
+    width: 100em;
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -19,10 +20,10 @@
     justify-content: space-around;
     align-items: center;
     margin-top: 5vh;
+    margin-bottom: 5vh;
     background-color: #10151b !important;
     border-radius: 30px;
     box-shadow: 3px 7px 5px -5px rgba(0,0,0,0.2),3px 5px 5px 3px rgba(0,0,0,0.14),3px 5px 9px 3px rgba(0,0,0,0.12);
-    width: 70vw;
 }
 .textContainer {
     height: 100%;
@@ -31,20 +32,22 @@
 .ptext {
     color: white;
     font-size: calc(15px + 1.1vw);
+    font-size: 3em;
     text-align: left;
-    width: 45vw;
+    width: 25em;
     margin: 1rem;
 
 }
 .me {
     height: 40vh;
+    height: 30em;
     width: auto;
-    margin: 1rem;
+    margin: 1.5em;
     border-radius: 5px;
     box-shadow: 2px 2px rgba(0,0,0,0.12);
 }
 .down {
-    height: 10vh;
+    height: 8vh;
     width: auto;
     position: relative;
     top: 200%;
