--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -16,9 +16,11 @@
     /* font-family: BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
     font-family: 'Tahoma';
     font-size: calc(40px + 2vw);
+    font-size: 5em;
     width: 17ch;
     animation: type 1.1s steps(80), blink .5s step-end infinite alternate;
     margin-top: -10%;
+    margin-bottom: 5%;
     margin-left: 2%;
     margin-right: 2%;
     text-align: center;
@@ -26,7 +28,7 @@
 }
 
 #homeCont {
-    width: 70vw;
+    width: 100em;
     margin: 0 auto;
 }
 
@@ -48,6 +50,7 @@ h3 > span {
     float: right;
     text-align: center;
     font-size: calc(15px + 1.2vw);
+    font-size: 3em;
     animation: show 1s;
     animation-delay: 2s;
     animation-fill-mode: forwards;
@@ -58,6 +61,7 @@ h3 > span {
     border-radius: 30px;
     box-shadow: 3px 7px 5px -5px rgba(0,0,0,0.2),3px 5px 5px 3px rgba(0,0,0,0.14),3px 5px 9px 3px rgba(0,0,0,0.12);
     height: 4em;
+    width: 100em;
 }
 
 .down {
